--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-helmet": "^6.1.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
