--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
